fixtures/valid/24-v0.9-minimal/input.anatomy
anatomy_version = "0.9"
tagline = "minimal v0.9 fixture — only required fields"

[identity]
stack = "javascript"
form = "library"
domain = "demo"
function = "minimal"
fingerprint = "kh3ybxthmht0yvvskye2"

[generated]
at = 2026-05-09T12:00:00.000Z
by = "anatomy-cli@0.12.0"
model = "none"
schema = "https://anatomy.dev/spec/0.9/schema.json"
